--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.2",
+    "D": "^1.0.0",
     "flag-icons": "^7.1.0",
     "vue": "^3.3.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "sass": "^1.69.5",
     "vite": "^5.0.8"
   }
 }
